# dotenvpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: unix-ci.yml  windows-ci.yml
cmake/: dotenvppConfig.cmake.in
include/: dotenv.hpp  parser.hpp  searcher.hpp
src/: dotenv.cpp  parser.cpp  searcher.cpp
tests/: CMakeLists.txt  test_dotenv.cpp
